--- a/custom_components/ecotracker/manifest.json
+++ b/custom_components/ecotracker/manifest.json
@@ -4,8 +4,8 @@
   "codeowners": ["@stefanseeger"],
   "config_flow": true,
   "documentation": "https://github.com/stefanseeger/ecotracker-ha",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/stefanseeger/ecotracker-ha/issues",
   "requirements": [],
-  "version": "1.0.0",
-  "iot_class": "local_polling"
+  "version": "1.0.0"
 }
